<resources>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="discard">舍弃</string>
    <string name="keep_editing">继续编辑</string>
    <string name="no">否</string>
    <string name="reload">重新加载</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="space">" "</string>
    <string name="yes">是</string>
    <string name="activity_not_found">未找到可处理此操作的应用</string>
    <string name="copied_to_clipboard_format">已复制到剪贴板：\n%1$s</string>
    <string name="confirm_close_discarding_content">确定要舍弃正在编辑的内容吗？</string>
    <string name="counter_format">%1$d/%2$d</string>
    <string name="load_empty">暂无内容</string>
    <string name="load_error">加载失败</string>
    <string name="more">更多</string>
    <string name="not_yet_implemented">尚未实现，敬请期待</string>
    <string name="open_settings">打开设置</string>
    <string name="report_abuse">举报不良信息</string>
    <string name="time_action_format">%1$s %2$s</string>
    <string name="time_action_format_compat">%1$s%2$s</string>
    <string name="view_more">查看更多</string>
    <string name="view_more_with_count_format">查看更多（%1$d）</string>
    <string name="view_on_web">通过网页查看</string>
    <string name="just_now">刚刚</string>
    <string name="minute_format">%1$d分钟前</string>
    <string name="hour_format">%1$d小时前</string>
    <string name="today_hour_minute_pattern">今天 HH:mm</string>
    <string name="yesterday_hour_minute_pattern">昨天 HH:mm</string>
    <string name="month_day_hour_minute_pattern">M月d日 HH:mm</string>
    <string name="date_hour_minute_pattern">Y年M月d日 HH:mm</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="month_day_pattern">M月d日</string>
    <string name="date_pattern">Y年M月d日</string>
    <string name="year_month_pattern">Y年M月</string>
    <string name="year_month_format">%1$d年%2$d月</string>
    <string name="year_pattern">Y年</string>
    <string name="year_format">%1$d年</string>
    <string name="duration_hour_minute_second_format">%1$d:%2$02d:%3$02d</string>
    <string name="duration_minute_second_format">%1$02d:%2$02d</string>
    <string name="media_action_play">播放</string>
    <string name="media_action_pause">暂停</string>
    <string name="media_action_skip_to_previous">上一首</string>
    <string name="media_action_skip_to_next">下一首</string>
    <string name="notices_title">@string/settings_open_source_licenses_title</string>
    <string name="notices_close">@string/close</string>
    <string name="app_name">豆芽</string>
    <string name="api_error_parse">解析错误</string>
    <string name="api_error_auth_failure">认证失败</string>
    <string name="api_error_timeout">请求超时</string>
    <string name="api_error_no_connection">无网络连接</string>
    <string name="api_error_network">网络错误</string>
    <string name="api_error_invalid_error_response">服务器错误</string>
    <string name="api_error_invalid_request_997">缺少签名</string>
    <string name="api_error_unknown_v2_error">未知 V2 错误</string>
    <string name="api_error_need_permission">需要权限</string>
    <string name="api_error_uri_not_found">资源不存在</string>
    <string name="api_error_missing_args">缺少参数</string>
    <string name="api_error_image_too_large">图片过大</string>
    <string name="api_error_has_ban_word">包含违禁词语</string>
    <string name="api_error_input_too_short">输入过短</string>
    <string name="api_error_target_not_found">对象不存在</string>
    <string name="api_error_need_captcha">需要验证码</string>
    <string name="api_error_image_unknown">未知图片格式</string>
    <string name="api_error_image_wrong_format">图片格式错误</string>
    <string name="api_error_image_wrong_ck">私有图片访问验证错误</string>
    <string name="api_error_image_ck_expired">私有图片验证过期</string>
    <string name="api_error_title_missing">缺少标题</string>
    <string name="api_error_desc_missing">缺少描述</string>
    <string name="api_error_unknown">未知错误</string>
    <string name="api_error_token_invalid_request_scheme">请求协议无效</string>
    <string name="api_error_token_invalid_request_method">请求方法无效</string>
    <string name="api_error_token_access_token_is_missing">缺少 access_token</string>
    <string name="api_error_token_invalid_access_token">access_token 无效</string>
    <string name="api_error_token_invalid_apikey">API Key 无效</string>
    <string name="api_error_token_apikey_is_blocked">API Key 已被屏蔽</string>
    <string name="api_error_token_access_token_has_expired">access_token 已过期</string>
    <string name="api_error_token_invalid_request_uri">请求地址无效</string>
    <string name="api_error_token_invalid_credencial1">用户未授权此访问</string>
    <string name="api_error_token_invalid_credencial2">API Key 未申请此权限</string>
    <string name="api_error_token_not_trial_user">不是测试用户</string>
    <string name="api_error_token_rate_limit_exceeded1">用户访问速度限制</string>
    <string name="api_error_token_rate_limit_exceeded2">IP 访问速度限制</string>
    <string name="api_error_token_required_parameter_is_missing">缺少参数</string>
    <string name="api_error_token_unsupported_grant_type">不支持的 grant_type</string>
    <string name="api_error_token_unsupported_response_type">不支持的 response_type</string>
    <string name="api_error_token_client_secret_mismatch">client_secret 不匹配</string>
    <string name="api_error_token_redirect_uri_mismatch">redirect_uri 不匹配</string>
    <string name="api_error_token_invalid_authorization_code">authorization_code 无效</string>
    <string name="api_error_token_invalid_refresh_token">refresh_token 无效</string>
    <string name="api_error_token_username_password_mismatch">用户名与密码不匹配</string>
    <string name="api_error_token_invalid_user">用户不存在或已删除</string>
    <string name="api_error_token_user_has_blocked">用户已被屏蔽</string>
    <string name="api_error_token_access_token_has_expired_since_password_changed">access_token 因用户修改密码过期</string>
    <string name="api_error_token_access_token_has_not_expired">access_token 尚未过期</string>
    <string name="api_error_token_invalid_request_scope">访问 scope 无效</string>
    <string name="api_error_token_invalid_request_source">访问来源无效</string>
    <string name="api_error_token_thirdparty_login_auth_failed">第三方授权错误</string>
    <string name="api_error_token_user_locked">用户已被锁定</string>
    <string name="api_error_followship_already_followed">你已经关注过这个用户了</string>
    <string name="api_error_followship_not_followed_yet">你还没有关注这个用户</string>
    <string name="api_error_broadcast_not_found">广播不存在</string>
    <string name="api_error_rebroadcast_broadcast_deleted">被转播广播已被删除</string>
    <string name="notification_channel_send_broadcast_name">发送广播</string>
    <string name="notification_channel_send_broadcast_description">显示发送广播的状态</string>
    <string name="notification_channel_play_music_name">播放音乐</string>
    <string name="notification_channel_play_music_description">显示和控制播放音乐的状态</string>
    <string name="auth_title_new">登录豆芽</string>
    <string name="auth_title_add">添加账户</string>
    <string name="auth_title_update">更新密码</string>
    <string name="auth_title_confirm">确认密码</string>
    <string name="auth_username">用户名</string>
    <string name="auth_password">密码</string>
    <string name="auth_sign_in">登录</string>
    <string name="auth_sign_up">没有账户？现在注册</string>
    <string name="auth_error_empty_username">请输入用户名</string>
    <string name="auth_error_empty_password">请输入密码</string>
    <string name="auth_error_invalid_response">服务器应答无效</string>
    <string name="auth_error_unknown">未知错误</string>
    <string name="auth_select_account">选择账户</string>
    <string name="gallery_title">查看图片</string>
    <string name="gallery_title_multiple_format">查看图片（%1$d/%2$d）</string>
    <string name="gallery_network_error">网络错误</string>
    <string name="gallery_load_error">加载错误</string>
    <string name="gallery_save_permission_request_message">豆芽需要权限以保存图片，请您在之后弹出的系统对话框中点击“允许”。</string>
    <string name="gallery_save_permission_permanently_denied_message">豆芽需要权限以保存图片，请您在系统设置界面中授予“存储空间”权限。</string>
    <string name="gallery_save_permission_denied">保存图片失败，缺少权限</string>
    <string name="gallery_save_successful">已保存图片至相册</string>
    <string name="gallery_save_failed">保存图片失败</string>
    <string name="webview_title">查看网页</string>
    <string name="webview_go_forward">前进</string>
    <string name="webview_open_with_native">使用应用界面</string>
    <string name="webview_copy_url">复制链接</string>
    <string name="webview_error_url_empty">链接为空</string>
    <string name="webview_request_desktop_site">请求桌面版网站</string>
    <string name="webview_open_in_browser">在浏览器中打开</string>
    <string name="webview_download_permission_request_message">豆芽需要权限以下载文件，请您在之后弹出的系统对话框中点击“允许”。</string>
    <string name="webview_download_permission_permanently_denied_message">豆芽需要权限以下载文件，请您在系统设置界面中授予“存储空间”权限。</string>
    <string name="webview_download_permission_denied">下载文件失败，缺少权限</string>
    <string name="webview_downloading">正在下载文件…</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_book">读书</string>
    <string name="navigation_movie">电影</string>
    <string name="navigation_music">音乐</string>
    <string name="navigation_calendar">电影日历</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_feedback">反馈</string>
    <string name="navigation_add_account">添加账户</string>
    <string name="navigation_remove_current_account">移除当前账户</string>
    <string name="navigation_remove_current_account_confirm">确定要移除当前账户吗？</string>
    <string name="navigation_manage_accounts">管理账户</string>
    <string name="main_notification">提醒</string>
    <string name="main_doumail">豆邮</string>
    <string name="main_search">搜索</string>
    <string name="home_broadcast">友邻广播</string>
    <string name="home_discover">浏览发现</string>
    <string name="home_topic">话题广场</string>
    <string name="home_online">线上活动</string>
    <string name="broadcast_list_title_default">广播列表</string>
    <string name="broadcast_list_title_user_format">%s 的广播</string>
    <string name="broadcast_list_title_topic_format">#%s#</string>
    <string name="broadcast_send_title">发广播</string>
    <string name="broadcast_send_intent_filter_title">分享到豆瓣广播</string>
    <string name="broadcast_send_title_sending">正在发送广播…</string>
    <string name="broadcast_send">发送</string>
    <string name="broadcast_send_error_empty">说点什么吧…</string>
    <string name="broadcast_send_error_text_too_long">这条广播太长了</string>
    <string name="broadcast_sending">正在发送广播…</string>
    <string name="broadcast_sending_notification_title">发送广播</string>
    <string name="broadcast_sending_notification_text_uploading_images_format">正在上传图片（%1$d/%2$d）…</string>
    <string name="broadcast_sending_notification_text_sending">正在发送广播…</string>
    <string name="broadcast_send_successful">已发送广播</string>
    <string name="broadcast_send_failed_format">发送广播失败，%1$s</string>
    <string name="broadcast_send_add_image">添加照片</string>
    <string name="broadcast_send_remove_all_images">移除所有照片</string>
    <string name="broadcast_send_add_link">推荐网页</string>
    <string name="broadcast_send_edit_link">修改网页</string>
    <string name="broadcast_send_remove_link">移除网页</string>
    <string name="broadcast_send_edit_link_url_caption">网页地址</string>
    <string name="broadcast_send_edit_link_url_hint">https://</string>
    <string name="broadcast_send_edit_link_title_caption">网页标题</string>
    <string name="broadcast_send_edit_link_title_hint">留空以自动获取</string>
    <string name="broadcast_send_add_mention">\@某人</string>
    <string name="broadcast_send_add_topic">添加话题</string>
    <string name="broadcast_rebroadcast_text_hint">说点什么吧…</string>
    <string name="profile_send_doumail">发豆邮</string>
    <string name="profile_blacklist">加入黑名单</string>
    <string name="about_name">@string/app_name</string>
    <string name="about_words">Douban, Yet Another</string>
    <string name="about_credit">梦断代码</string>
    <string name="about_douban">\@douban-douya</string>
</resources>