<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/main_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/main_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/doumail"
        android:icon="@drawable/mail_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/main_doumail"
        app:showAsAction="always" />
</menu>
